<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="appewtc.masterung.enssystem.HubActivity"
    android:background="@drawable/wall">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="แจ้งเหตุฉุกเฉิน"
        android:id="@+id/textView35"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/imageView2"
                android:src="@drawable/section1"
                android:baselineAlignBottom="false"
                android:layout_weight="1"
                android:onClick="clickInform" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/imageView3"
                android:src="@drawable/section2"
                android:layout_weight="1"
                android:onClick="clickNews" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/th_infor"
                android:id="@+id/textView9"
                android:layout_weight="1"
                android:textColor="@color/text"
                android:gravity="center_horizontal"
                android:textSize="@dimen/h2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/th_news"
                android:id="@+id/textView10"
                android:layout_weight="1"
                android:textColor="@color/text"
                android:gravity="center_horizontal"
                android:textSize="@dimen/h2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/imageView6"
                android:src="@drawable/section3"
                android:layout_weight="1"
                android:onClick="clickSearch" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/imageView7"
                android:src="@drawable/section4"
                android:layout_weight="1"
                android:onClick="clickStatic" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/th_search"
                android:id="@+id/textView11"
                android:layout_weight="1"
                android:textColor="@color/text"
                android:gravity="center_horizontal"
                android:textSize="@dimen/h2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/th_status"
                android:id="@+id/textView12"
                android:layout_weight="1"
                android:textColor="@color/text"
                android:gravity="center_horizontal"
                android:textSize="@dimen/h2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/imageView4"
                android:src="@drawable/section5"
                android:onClick="clickCall" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/th_call"
                android:id="@+id/textView13"
                android:textColor="@color/text"
                android:gravity="center_horizontal"
                android:textSize="@dimen/h2" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>